--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,18 @@ jobs:
 
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
-    
+
     - name: Install dependencies
       run: pip install tox tox-gh-actions
 
     - name: Test with tox
       run: tox
+
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+          slug: Jaisy-m/python-dotenv
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: .coverage
+          flags: unittests
+          name: python-dotenv
