--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ deps =
   sh >= 2.0.2, <3
   click
   py{38,39,310,311,py312-dev,pypy3}: ipython
-commands = pytest --cov --cov-report=term-missing --cov-config setup.cfg {posargs}
+commands = pytest --cov=src/dotenv --cov-report=term-missing --cov-config setup.cfg {posargs}
 depends =
     py{38,39,310,311,312-dev},pypy3: coverage-clean
     coverage-report: py{38,39,310,311,312-dev},pypy3
