--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ commands = pytest --cov=src/dotenv --cov-report=term-missing --cov-config setup.
 depends =
     py{38,39,310,311,312-dev},pypy3: coverage-clean
     coverage-report: py{38,39,310,311,312-dev},pypy3
+parallel_show_output = True
 
 [testenv:lint]
 skip_install = true
@@ -47,6 +48,8 @@ commands = coverage erase
 
 [testenv:coverage-report]
 deps = coverage
-skip_install = true
 commands =
+  coverage combine
   coverage report
+  coverage xml -o coverage.xml
+depends = py{38,39,310,311,312-dev},pypy3
