--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,8 @@ deps =
   sh >= 2.0.2, <3
   click
   py{38,39,310,311,py312,pypy3}: ipython
-commands = pytest --cov=src/dotenv --cov-append --cov-report=term-missing --cov-config setup.cfg {posargs}
+commands = pytest --cov=src/dotenv --cov-append --cov-report=term-missing {posargs}
+
 depends =
     py{38,39,310,311,312},pypy3: coverage-clean
     coverage-report: py{38,39,310,311,312},pypy3
