--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,33 @@ jobs:
 
     - name: Upgrade pip
       run: python -m pip install --upgrade pip
-    
+
     - name: Install dependencies
       run: pip install tox tox-gh-actions
 
     - name: Test with tox
       run: tox
+
+  opload-coverage:
+    needs: test
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+
+      - name: Combine coverage data
+        run: coverage combine
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: .coverage
+          flags: unittests
+          name: python-dotenv
+          fail_ci_if_error: true
