--- a/setup.cfg
+++ b/setup.cfg
@@ -24,14 +24,16 @@ relative_files = True
 source = dotenv
 
 [coverage:paths]
-source = 
+source =
 	src/dotenv
 	.tox/*/lib/python*/site-packages/dotenv
 	.tox/pypy*/site-packages/dotenv
 
 [coverage:report]
 show_missing = True
-include = */site-packages/dotenv/*
-exclude_lines = 
+include =
+    src/dotenv/*
+    */site-pckages/dotenv/*
+exclude_lines =
 	if IS_TYPE_CHECKING:
 	pragma: no cover
