--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,13 +29,15 @@ jobs:
       run: pip install tox tox-gh-actions
 
     - name: Test with tox
-      run: tox
+      run:
+        tox
+        coverage xml -o coverage.xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        file: .coverage
+        file: coverage.xml
         flags: unittests
         name: python-${{ matrix.python-version }}
         fail_ci_if_error: true
