--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,8 +29,8 @@ jobs:
       run: pip install tox tox-gh-actions
 
     - name: Test with tox
-      run:
-        tox
+      run: |
+        tox &&
         coverage xml -o coverage.xml
 
     - name: Upload coverage to Codecov
