--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       run: python -m pip install --upgrade pip
 
     - name: Install dependencies
-      run: pip install tox tox-gh-actions
+      run: pip install tox tox-gh-actions coverage
 
     - name: Test with tox
       run: |
